fix: toast style add z-index

--- a/packages/style/src/components/toast.scss
+++ b/packages/style/src/components/toast.scss
@@ -25,6 +25,7 @@ $toast-out: unique-id();
   font-size: 14px;
   line-height: 1.2em;
   transition: transform .3s ease-in-out;
+  z-index: 600;
 }
 
 // vue-transition
